<resources>
    <string name="app_name">Bino</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main_menu">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    //MainActivity
    //layInicial
    <string name="main_layInicial_txBemVindo">BEM VINDO, \nCAMINHONEIRO</string>
    <string name="main_layInicial_btnAcessar">Acessar</string>
    <string name="main_layInicial_ou">OU</string>
    <string name="main_layInicial_btnGoogle">  Entrar com Google</string>
    <string name="main_layInicial_btnFace">  Entrar com Facebook</string>
    <string name="main_layInicial_btnSemLogin">  Entrar sem Login</string>
    <string name="main_layInicial_txRecebeuConv">Recebeu um convite?</string>
    <string name="main_layInicial_txCrie">Crie sua conta</string>
    //layLoginWithEmail
    <string name="main_layLoginWithEmail_btnCriar">Criar conta</string>
    //layVerificaEmail
    <string name="main_layVerificaMail_txTitulo">Verificação do e-mail</string>
    <string name="main_layVerificaMail_tx1">Acabamos de enviar uma mensagem de verificação para o e-mail informado. Basta seguir as instruções no e-mail para finalizar o cadastro. Caso o e-mail não tenha chegado, clique no botão abaixo.</string>
    <string name="main_layVerificaMail_btnVerifiquei">Já verifiquei</string>
    <string name="main_layVerificaMail_btnReenviar">Reenviar e-mail</string>


    //ActivityPerfil
    <string name="perfil_tvNome">Nome completo</string>
    <string name="perfil_tvData">Data de nascimento</string>
    <string name="perfil_tvCel">Número de celular</string>
    <string name="perfil_tvEmerg">Número para emergências</string>
    <string name="perfil_tvDoencas">Doenças pré-existentes</string>
    <string name="perfil_tvRemedios">Toma remédio?</string>
    <string name="perfil_btnSalvar">Salvar e sair</string>


    //AcitivityMaps
    //GenerateCode
    <string name="maps_convite_txtit">Convide amigos\ncaminhoneiros</string>
    <string name="maps_convite_tx1">1º - Gere o código\n2º - Copie ou Envie para um amigo caminhoneiro</string>
    <string name="maps_convite_btnGerar">Gerar Código</string>
    //VerifyCode
    <string name="maps_verify_txtit">INSIRA SEU CÓDIGO,\nCAMINHONEIRO</string>
    <string name="maps_verify_btnVerificar">Verificar</string>

    //ActivityNames
    <string name="activity_name_emergence">Emergência</string>
    <string name="activity_name_perfil">Perfil</string>

    //DrawerMenu
    <string name="menu_user">Meu Perfil</string>
    <string name="menu_friends_user">Meus Amigos</string>
    <string name="menu_getHelp">Pedir Ajuda</string>
    <string name="menu_health_user">Minha Saúde</string>
    <string name="menu_new_locations">Novo Local</string>
    <string name="menu_invited">Gerar Convite</string>
    <string name="menu_settings">Configurações</string>

    //DrawerMenuFooter
    <string name="text_switch_visible">Ficar Visivel</string>
    <string name="text_switch_invisible">Ficar Invisivel</string>
    <string name="text_login">Deseja entrar no app?</string>
    <string name="text_logout">Deseja sair do app?</string>
    <string name="text_login_action">Login</string>
    <string name="text_logout_action">Logout</string>





    //MessageApp
    <string name="developing">Em breve \nEstamos desenvolvendo!</string>
    <string name="whatsproblem">Qual o Problema?</string>
    <string name="emergency_user">Ao Acionar esse botão Bino irá fazer ligações para números de emergências que irão vir ao seu soccoro.\n Você pode acioná-lo eo perceber ou estiver em uma situação de risco, como assalto, roubo, acidente ou qualquer outra situação que seja considerada de risco.</string>



    //MessageHealth
    <string name="lunch">Ei Pedro, bora almoçar?</string>
    <string name="fruit">Pedro, já comeu alguma fruta hoje?</string>

    <string name="remedy_pressure">Ei Pedro, lembre do seu remédio de pressão?</string>
    <string name="fine">Pedro, como vc tá se sentindo hoje?</string>
    <string name="glasswater">Pedro, que tal um copo de água para refrescar?</string>

    <string name="walking">Ei Pedro, que tal uma caminhada no fim do dia?</string>
    <string name="legs">Ei Pedro, lembre de esticar as pernas?</string>


</resources>
